--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    compile('net.lightbody.bmp:browsermob-core:2.1.5'){
+        exclude module: 'selenium'
+    }
 }
